terraform/main.tf
provider "aws" {
  region = "us-east-2"
}

data "aws_availability_zones" "available" {
  state = "available"
}

# VPC
resource "aws_vpc" "interview_vpc" {
  cidr_block           = var.vpc_cidr
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name                                  = "interview_vpc"
    "kubernetes.io/cluster/interview_eks" = "shared"
  }
}

# Public Subnets
resource "aws_subnet" "public" {
  count = var.availability_zones_count

  vpc_id                  = aws_vpc.interview_vpc.id
  cidr_block              = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name                                  = "interview_public_subnet"
    "kubernetes.io/cluster/interview_eks" = "shared"
    "kubernetes.io/role/elb"              = 1
  }
}

# Private Subnets
resource "aws_subnet" "private" {
  count = var.availability_zones_count

  vpc_id                  = aws_vpc.interview_vpc.id
  cidr_block              = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index + var.availability_zones_count)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = false

  tags = {
    Name                                  = "interview_private_subnet"
    "kubernetes.io/cluster/interview_eks" = "shared"
    "kubernetes.io/role/internal-elb"     = 1
  }
}

# Internet Gateway
resource "aws_internet_gateway" "interview_igw" {
  vpc_id = aws_vpc.interview_vpc.id

  tags = {
    Name = "interview_igw"
  }
}

# NAT Elastic IP
resource "aws_eip" "nat_ip" {
  tags = {
    Name = "interview_nat_ip"
  }
}

# NAT Gateway (public)
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_ip.id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name = "interview_nat_gateway"
  }
}

# Public Route Table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.interview_vpc.id

  tags = {
    Name = "interview_public_rt"
  }
}

# Private Route Table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.interview_vpc.id

  tags = {
    Name = "interview_private_rt"
  }
}

# Public Route Table - Internet Access
resource "aws_route" "public_internet_gateway" {
  route_table_id         = aws_route_table.public.id
  gateway_id             = aws_internet_gateway.interview_igw.id
  destination_cidr_block = "0.0.0.0/0"
}

# Private Route Table - NAT Gateway
resource "aws_route" "private_nat_gateway" {
  route_table_id         = aws_route_table.private.id
  nat_gateway_id         = aws_nat_gateway.nat.id
  destination_cidr_block = "0.0.0.0/0"
}

# Associate Public Subnets with Public Route Table
resource "aws_route_table_association" "public" {
  count = var.availability_zones_count

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Associate Private Subnets with Private Route Table
resource "aws_route_table_association" "private" {
  count = var.availability_zones_count

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
# EKS Cluster IAM Role
resource "aws_iam_role" "cluster" {
  name = "interview_eks_cluster_role"

  assume_role_policy = <<POLICY
  {
    "Version": "2012-10-17",
    "Statement": [
      {
        "Effect": "Allow",
        "Principal": {
          "Service": "eks.amazonaws.com"
        },
        "Action": "sts:AssumeRole"
      }
    ]
  }
  POLICY
}

# Attach EKS Cluster Policies
resource "aws_iam_role_policy_attachment" "AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.cluster.name
}

resource "aws_iam_role_policy_attachment" "AmazonEKSVPCResourceController" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"
  role       = aws_iam_role.cluster.name
}


# EKS Cluster
resource "aws_eks_cluster" "interview_eks" {
  name     = "interview_eks"
  version  = "1.29"
  role_arn = aws_iam_role.cluster.arn

  vpc_config {
    subnet_ids              = flatten([aws_subnet.public[*].id, aws_subnet.private[*].id])
    endpoint_private_access = true
    endpoint_public_access  = true
    public_access_cidrs     = ["0.0.0.0/0"]
  }

  depends_on = [
    aws_iam_role_policy_attachment.AmazonEKSClusterPolicy,
    aws_iam_role_policy_attachment.AmazonEKSVPCResourceController
  ]
}
resource "kubernetes_secret" "postgres_password" {
  metadata {
    name = "postgres-passwords"
  }

  data = {
    postgres = "MySecurePassword"
  }

  type       = "Opaque"
  lifecycle {
    ignore_changes = [data]  # Prevent Terraform from overwriting existing secrets
  }
}
# Worker Nodes IAM Role
resource "aws_iam_role" "node" {
  name = "interview_eks_node_role"

  assume_role_policy = <<POLICY
  {
    "Version": "2012-10-17",
    "Statement": [
      {
        "Effect": "Allow",
        "Principal": {
          "Service": "ec2.amazonaws.com"
        },
        "Action": "sts:AssumeRole"
      }
    ]
  }
  POLICY
}

# Attach necessary IAM policies
resource "aws_iam_role_policy_attachment" "AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.node.name
}

resource "aws_iam_role_policy_attachment" "AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.node.name
}

resource "aws_iam_role_policy_attachment" "AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.node.name
}
resource "aws_iam_role_policy_attachment" "AmazonEBSCSIDriverPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
  role       = aws_iam_role.node.name
}

# Worker Nodes - On-Demand Instances
resource "aws_eks_node_group" "interview_nodes" {
  cluster_name  = aws_eks_cluster.interview_eks.name
  node_role_arn = aws_iam_role.node.arn
  subnet_ids    = flatten([aws_subnet.private[*].id, aws_subnet.public[*].id])

  scaling_config {
    desired_size = 2
    max_size     = 3
    min_size     = 1
  }

  instance_types = ["t3.medium"]
  capacity_type  = "ON_DEMAND"
  disk_size      = 20

  tags = {
    Name = "interview_eks_nodes"
  }

  depends_on = [aws_iam_role.node]
}

data "aws_eks_cluster_auth" "interview_eks" {
  name = aws_eks_cluster.interview_eks.name
}
provider "kubernetes" {
  host                   = aws_eks_cluster.interview_eks.endpoint
  token                  = data.aws_eks_cluster_auth.interview_eks.token
  cluster_ca_certificate = base64decode(aws_eks_cluster.interview_eks.certificate_authority[0].data)
}


# Create a Separate Namespace for the Bonus Feature
resource "kubernetes_namespace" "review_system" {
  metadata {
    name = "review-system-namespace"
  }
}
